Revised with edits

--- a/index.html
+++ b/index.html
@@ -49,21 +49,33 @@
 
   fetch("https://wedev-api.sky.pro/api/v1/alexandrova-julia/comments", {
     method: "GET"
-  }).then((response) => {
-    response.json().then((responseData) => {
+  })
+    .then((response) => {
+      if (response.status === 500) {
+        throw new Error("Сервер сломался");
+      }
+      return response.json();
+    })
+    .then((responseData) => {
       comments = responseData.comments.map((comment) => {
         return {
           name: comment.author.name,
           date: new Date(comment.date).toLocaleDateString() + " " + (new Date(comment.date).getHours() < 10 ? '0' + new Date(comment.date).getHours() : new Date(comment.date).getHours()) + ":" + (new Date(comment.date).getMinutes() < 10 ? '0' + new Date(comment.date).getMinutes() : new Date(comment.date).getMinutes()) + ":" + (new Date(comment.date).getSeconds() < 10 ? '0' + new Date(comment.date).getSeconds() : new Date(comment.date).getSeconds()),
-          isLiked: comment.isLiked,
+          isLiked: false,
           likes: comment.likes,
           text: comment.text,
         };
       });
       renderComments();
       preloader.classList.add('hide');
+    })
+    .catch((error) => {
+      if (error instanceof TypeError) {
+        preloader.classList.add('hide');
+        alert("Кажется, у вас сломался Интернет, попробуйте позже");
+        return;
+      }
     });
-  });
 
   const sanitizeHtml = (htmlString) => {
     return htmlString.replaceAll("<", "&lt;").replaceAll(">", "&gt;");
@@ -122,13 +134,16 @@
   buttonWrite.addEventListener("click", () => {
     inputName.classList.remove("error");
     inputText.classList.remove("error");
-    if (inputName.value.trim() === "" || inputName.value === null || inputName.value.length <= 2) {
+    if (inputName.value.trim() === "" || inputName.value === null) {
       inputName.classList.add("error");
       return;
-    } else if (inputText.value.trim() === "" || inputText.value === null || inputText.value.length <= 2) {
+    } else if (inputText.value.trim() === "" || inputText.value === null) {
       inputText.classList.add("error");
       return;
     };
+
+    const nameValue = inputName.value;
+    const textValue = inputText.value;
 
     buttonWrite.disabled = true;
     buttonWrite.textContent = "Комментарий добавляется...";
@@ -141,10 +156,14 @@
       }),
     })
       .then((response) => {
-        if (response.status === 201) {
+        if (response.status === 400 && (nameValue.length < 3 || textValue.length < 3)) {
+          throw new Error("Некорректный запрос");
+        }
+        if (response.status === 500) {
+          throw new Error("Сервер сломался");
+        }
+        else {
           return response.json();
-        } else {
-          return Promise.reject("Сервер упал");
         }
       })
       .then((responseData) => {
@@ -172,8 +191,25 @@
         buttonWrite.textContent = "Написать";
         inputName.value = "";
         inputText.value = "";
-      }).catch((error) => {
-        alert("Упс, кажется что-то пошло не так, пожалуйста, попробуйте позже");
+      })
+      .catch((error) => {
+        if (error.message === "Сервер сломался") {
+          alert("Сервер сломался, попробуй позже");
+          inputName.value = nameValue;
+          inputText.value = textValue;
+          return;
+        } if (error.message === "Некорректный запрос") {
+          alert("Имя и комментарий должны быть не короче 3 символов");
+          inputName.value = nameValue;
+          inputText.value = textValue;
+        }
+        if (error instanceof TypeError) {
+          alert("Кажется, у вас сломался интернет, попробуйте позже");
+          return;
+        }
+        console.log(error);
+      })
+      .finally(() => {
         buttonWrite.disabled = false;
         buttonWrite.textContent = "Написать";
       });
