--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   const commentList = document.querySelector('.comments');
   const currentDate = new Date().toLocaleDateString('default', { day: '2-digit', month: '2-digit', year: '2-digit' }) + " " + new Date().toLocaleTimeString().slice(0, -3);
   const preloader = document.querySelector('.preloader');
+  const addForm = document.querySelector('.add-form');
 
   let comments = [];
 
@@ -64,6 +65,7 @@
           isLiked: false,
           likes: comment.likes,
           text: comment.text,
+          forceError: true,
         };
       });
       renderComments();
@@ -72,6 +74,7 @@
     .catch((error) => {
       if (error instanceof TypeError) {
         preloader.classList.add('hide');
+        addForm.textContent = "Не удалось загрузить комментарии";
         alert("Кажется, у вас сломался Интернет, попробуйте позже");
         return;
       }
@@ -122,7 +125,7 @@
     <div class="comment-footer">
       <div class="likes">
         <span class="likes-counter">${comment.likes}</span>
-        <button data-index=${index}" class="like-button ${comment.isLiked ? "-active-like" : ""}"></button>
+        <button data-index="${index}" class="like-button ${comment.isLiked ? "-active-like" : ""}"></button>
       </div>
     </div>
       </li>`
