Created auth form and message

--- a/index.html
+++ b/index.html
@@ -15,14 +15,28 @@
   </div>
 
   <div class="container">
+
     <ul class="comments">
     </ul>
-    <div class="add-form">
+
+    <!-- <div class="add-form">
       <input type="text" class="add-form-name" placeholder="Введите ваше имя" value="" />
       <textarea type="textarea" class="add-form-text" placeholder="Введите ваш коментарий" rows="4" value=""></textarea>
       <div class="add-form-row">
         <button class="add-form-button">Написать</button>
       </div>
+    </div>
+
+    <div class="add-form">
+      <input type="text" class="add-form-login" placeholder="Введите ваш логин" value="" />
+      <textarea type="textarea" class="add-form-password" placeholder="Введите ваш пароль" value=""></textarea>
+      <div class="add-form-row">
+        <button class="add-form-button" id="login-button">Зарегистрироваться</button>
+        <button class="add-form-button" id="login-button">Войти</button>
+      </div>
+    </div> -->
+
+    <div class="auth-form" id="auth-message">Чтобы добавить комментарий, <span id="login-lik">авторизуйтесь</span>...
     </div>
   </div>
 </body>
