--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <div class="container"></div>
 </body>
 
-<script type="module" src="./main.js"></script>
+<script src="./dist/main.js"></script>
 
 </html>
