--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+    <head>
+        <title>Проект "Комменты"</title>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="styles.css" />
+    </head>
 
-<head>
-  <title>Проект "Комменты"</title>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
+    <body>
+        <div class="preloader">
+            <div class="preloader__loader">
+                <div class="spinner"></div>
+            </div>
+        </div>
 
-<body>
-  <div class="preloader">
-    <div class="preloader__loader">
-      <div class="spinner"></div>
-    </div>
-  </div>
+        <div class="container"></div>
+    </body>
 
-  <div class="container"></div>
-</body>
-
-<script src="./dist/main.js"></script>
-
+    <script src="./dist/main.js"></script>
 </html>
